[build-system]
requires = ["setuptools >= 64", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[project]
name = "npg-tracking-python"
license = { file = "COPYING", content-type = "text/plain" }
authors = [ 
    { name = "Marco M. Mosca", email = "mm51@sanger.ac.uk" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Programming Language :: Python",
    "Operating System :: Unix",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
keywords = ["npg"]
requires-python = ">= 3.12"

dynamic = ["version"]

description = "Tracking DB manager"
dependencies = [
    "pymysql",
    "sqlalchemy",
]

[project.optional-dependencies]
test = [
  "pytest",
  "ruff",
]

[project.scripts]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["W", "F", "I"]

[tool.setuptools-git-versioning]
enabled = true
